fix(QueryEditor): adjust execute issues scrollbar position

--- a/src/containers/Tenant/QueryEditor/Issues/Issues.scss
+++ b/src/containers/Tenant/QueryEditor/Issues/Issues.scss
@@ -1,8 +1,6 @@
 .kv-result-issues {
-    overflow: auto;
-
-    height: 100%;
     padding: 0 10px;
+
     &__error-message {
         position: sticky;
         z-index: 2;
@@ -16,6 +14,7 @@
 
         background-color: var(--yc-color-base-background);
     }
+
     &__error-message-text {
         margin: 0 10px;
     }
